--- a/foodOrdingSystem/template/base.html
+++ b/foodOrdingSystem/template/base.html
@@ -9,9 +9,11 @@
 
     <title>{% block title %}{% endblock title %} | Foodia</title>
      <!-- Bootstrap core CSS -->
-<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
 <link href="{% static 'css/all.min.css' %}" rel="stylesheet">
 <style>
+
+
     body {
         
         padding-top: 3.5rem;
