--- a/foodOrdingSystem/template/foodStuff/foodCart.html
+++ b/foodOrdingSystem/template/foodStuff/foodCart.html
@@ -2,140 +2,212 @@
 {% block title %}Food Cart{% endblock title %}
 
 
+
+
 {% block body %}
-<section class="h-100 gradient-custom">
-    <div class="container">
-        <div class="row d-flex justify-content-center my-4">
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-header">
-                        <h5 class="mb-0">Food Cart</h5>
-                    </div>
-                    <div class="card-body ">
 
-                        <!-- Single item -->
-                        
-                        {% if foodProducts %}
+
+
+
+
+
+
+
+
+
+<section class="h-100 h-custom" style="background-color: #eee;">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col">
+          <div class="card">
+            <div class="card-body p-4">
+  
+              <div class="row">
+  
+                <div class="col-lg-8">
+                  <h5 class="mb-3"><a href="#!" class="text-body"><i
+                        class="fas fa-long-arrow-alt-left me-2"></i>Continue shopping</a></h5>
+                  <hr>
+  
+                  <div class="d-flex justify-content-between align-items-center mb-4">
+                    <div>
+                      <p class="mb-1">Shopping cart</p>
+                      <p class="mb-0">You have {% if request.session.quantity %}
+                        {{request.session.quantity}}
+                          {% else %}                    
+                          0
+                        {% endif %} items in your cart</p>
+                    </div>
+                    <div>
+                      <p class="mb-0"><span class="text-muted">Sort by:</span> <a href="#!"
+                          class="text-body">price <i class="fas fa-angle-down mt-1"></i></a></p>
+                    </div>
+                  </div>
+                  {% if foodProducts %}
                             
                        
-                       {% for product in foodProducts %}
-                        
-                       
-                        
-                            
-                        <div class="row">
-                            <div class="col-lg-3 col-md-12 mb-lg-0">
-                                <!-- Image -->
-                                <div class="bg-image hover-overlay hover-zoom ripple rounded"
-                                    data-mdb-ripple-color="light">
-                                    <img src="/media/{{product.foodProductImage}}" class="w-100" alt="Blue Jeans Jacket" />
-                                    <a href="#!">
-                                        <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
-                                    </a>
-                                </div>
-                                <!-- Image -->
-                            </div>
-
-                            <div class="col-lg-5 col-md-6 mb-lg-0">
-                                <!-- Data -->
-                                <p><strong>{{product.foodName}}</strong></p>
-                                <p>Category: {{product.foodCategory}}</p>
-                                <p>Price : ${{product.foodPrice}}</p>
-                                <div class="d-flex" style="max-width: 300px">
-                                    {% if foodDictionary %}                                 
-                                    {% for itemKey,value  in foodDictionary.items %}
-                                 
-                                    {% if itemKey|lower == product.uid|lower %}
-                                    <p>Quantity: {{value}}</p>    
-                                    {% endif %}                                  
-                                    
-                                    {% endfor %}
-                                    {% endif %}
-                                    </div>                                
-                                <!-- Data -->
-                            </div>
-                            <div class="col-lg-4 col-md-6 mb-lg-0">
-                                <div class="d-flex mb-4" style="max-width: 300px">
-                                    <button class="btn btn-primary px-3 me-2"
-                                      onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                                      <i class="fas fa-minus"></i>
-                                    </button>
-                                    {% if foodDictionary %}                                 
-                                    {% for itemKey,value  in foodDictionary.items %}
-                                 
-                                    {% if itemKey|lower == product.uid|lower %}
-                                    <div class="form-outline">
-                                        <input id="form1" min="1" name="quantity" value="{{value}}" type="number" class="form-control" />
-                                        <label class="form-label" for="form1">Quantity</label>
-                                      </div>   
-                                    {% endif %}                                  
-                                    
-                                    {% endfor %}
-                                    {% endif %}
-
-                  
-                                    <button class="btn btn-primary px-3 ms-2"
-                                      onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                                      <i class="fas fa-plus"></i>
-                                    </button>
-                                  </div>
-                                <!-- Price -->
-                                <p class="text-start text-md-center">
-                                    {% if productPriceList %}                                 
-                                    {% for itemKey,value  in productPriceList.items %}                                 
-                                    {% if itemKey|lower == product.uid|lower %}
-                                    <p style="font-weight: bold;">Total Price: ${{value}}</p>
-                                    {% endif %}                                                                      
-                                    {% endfor %}
-                                    {% endif %}
-                                </p>
-                                <!-- Price -->
-                            </div>
-                        </div>
-                        <!-- Single item -->
-                        <hr class="my-4" />
-                        {% endfor %}
-                        {% endif %}    
-                    </div>
-                </div>
-                
-            </div>
-            
-            <div class="col-md-4">
-                <div class="card mb-4">
-                    <div class="card-header py-3">
-                        <h5 class="mb-0">Summary</h5>
-                    </div>
+                  {% for product in foodProducts %}
+                  <div class="card mb-3">
                     <div class="card-body">
-                        <ul class="list-group list-group-flush">
-                            <li
-                                class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                                Products
-                                <span>${{total}}</span>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                Shipping
-                                <span>$10</span>
-                            </li>
-                            <li
-                                class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
-                                <div>
-                                    <strong>Total amount</strong>
-                                    <strong>
-                                        <p class="mb-0">(including VAT)</p>
-                                    </strong>
-                                </div>
-                                <span><strong>${{ total |add:10 }}</strong></span>
-                            </li>
-                        </ul>
+                      <div class="d-flex justify-content-between">
+                        <div class="d-flex flex-row align-items-center">
+                          <div>
+                            <img src="/media/{{product.foodProductImage}}" class="img-fluid rounded-3" alt="Shopping item" style="width: 65px; height:65px;">
+                          </div>
+                          <div class="ms-3">
+                            <h5>{{product.foodName}}</h5>
+                            <p class="small mb-0">Category: {{product.foodCategory}}</p>
+                            <h6 class="mb-0">Price :${{product.foodPrice}}</h6>
+                          </div>
+                        </div>
+                        <div class="d-flex flex-row align-items-center">
+                          <div style="width: 50px;">
 
-                        <button type="button" class="btn btn-dark btn-lg btn-block">
-                            Go to checkout
-                        </button>
+
+                                {% if foodDictionary %}                                 
+                                {% for itemKey,value  in foodDictionary.items %}
+                             
+                                {% if itemKey|lower == product.uid|lower %}
+                         
+                            <form class="" id="qtyForm_{{ forloop.counter }}" action="{% url 'foodCartUpdateQty' %}" method="POST">
+                                {% csrf_token %}
+                                
+                                    <input type="hidden" name="foodProductId_{{ forloop.counter }}" value="{{itemKey}}">
+                                    <input id="form1" min="1" max="4" name="foodUpdateQuantity_{{ forloop.counter }}" value="{{value}}" type="number" onchange="submitForm('{{ forloop.counter }}')" class="form-control form-control-sm" />
+                                    
+                            </form>                                  
+                            {% endif %}                                  
+                            {% endfor %}
+                            {% endif %}
+                          </div>
+
+                         <div style="width: 80px;" class="px-2">
+                            {% if productPriceList %}                                 
+                            {% for itemKey,value  in productPriceList.items %}                                 
+                            {% if itemKey|lower == product.uid|lower %}
+                            <h6 class="mb-0">${{value}}</h6>
+                            {% endif %}                                                                      
+                            {% endfor %}
+                            {% endif %}
+                            
+                          </div>
+                          <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
+                        </div>
+                      </div>
                     </div>
+                  </div>
+  
+                  {% endfor %}
+                  {% endif %}
+
+  
+
+  
                 </div>
+                <div class="col-lg-4" >
+  
+                  <div class="card bg-dark text-white rounded-3">
+                    <div class="card-body">
+                      <div class="d-flex justify-content-between align-items-center mb-4">
+                        <h5 class="mb-0">Card details</h5>
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-6.webp"
+                          class="img-fluid rounded-3" style="width: 45px;" alt="Avatar">
+                      </div>
+  
+                      <p class="small mb-2">Card type</p>
+                      <a href="#!" type="submit" class="text-white"><i
+                          class="fab fa-cc-mastercard fa-2x me-2"></i></a>
+                      <a href="#!" type="submit" class="text-white"><i
+                          class="fab fa-cc-visa fa-2x me-2"></i></a>
+                      <a href="#!" type="submit" class="text-white"><i
+                          class="fab fa-cc-amex fa-2x me-2"></i></a>
+                      <a href="#!" type="submit" class="text-white"><i class="fab fa-cc-paypal fa-2x"></i></a>
+  
+                      <form class="mt-4">
+                        <div class="form-outline form-white mb-4">
+                          <input type="text" id="typeName" class="form-control form-control-lg" siez="17"
+                            placeholder="Cardholder's Name" />
+                          <label class="form-label" for="typeName">Cardholder's Name</label>
+                        </div>
+  
+                        <div class="form-outline form-white mb-4">
+                          <input type="text" id="typeText" class="form-control form-control-lg" siez="17"
+                            placeholder="1234 5678 9012 3457" minlength="19" maxlength="19" />
+                          <label class="form-label" for="typeText">Card Number</label>
+                        </div>
+  
+                        <div class="row mb-4">
+                          <div class="col-md-6">
+                            <div class="form-outline form-white">
+                              <input type="text" id="typeExp" class="form-control form-control-lg"
+                                placeholder="MM/YYYY" size="7" id="exp" minlength="7" maxlength="7" />
+                              <label class="form-label" for="typeExp">Expiration</label>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-outline form-white">
+                              <input type="password" id="typeText" class="form-control form-control-lg"
+                                placeholder="&#9679;&#9679;&#9679;" size="1" minlength="3" maxlength="3" />
+                              <label class="form-label" for="typeText">Cvv</label>
+                            </div>
+                          </div>
+                        </div>
+  
+                      </form>
+  
+                      <hr class="my-4">
+  
+                      <div class="d-flex justify-content-between">
+                        <p class="mb-2">Subtotal</p>
+                        <p class="mb-2">${{total}}.00</p>
+                      </div>
+  
+                      <div class="d-flex justify-content-between">
+                        <p class="mb-2">Shipping</p>
+                        <p class="mb-2">$10.00</p>
+                      </div>
+  
+                      <div class="d-flex justify-content-between mb-4">
+                        <p class="mb-2">Total(Incl. taxes)</p>
+                        <p class="mb-2">${{ total |add:10 }}</p>
+                      </div>
+  
+                      <button type="button" class="btn btn-info btn-block btn-lg">
+                        <div class="d-flex justify-content-between">
+                          <span>Checkout <i class="fas fa-long-arrow-alt-right ms-2"></i></span>
+                        </div>
+                      </button>
+  
+                    </div>
+                  </div>
+  
+                </div>
+  
+              </div>
+  
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</section>
+  </section>
+
+  <script>
+    function submitForm(id) {
+  document.getElementById("qtyForm_"+id).submit();
+}
+// function removeCartProduct(id){
+  //document.getElementById("delForm_"+id).submit();
+// }
+</script>
+
+
 {% endblock body %}
+
+
+
+
+
+
+
+
