--- a/foodOrdingSystem/template/base.html
+++ b/foodOrdingSystem/template/base.html
@@ -125,9 +125,11 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact</a>
                   </li>
+                  {% if request.user.is_staff %}
                   <li class="nav-item">
                     <a class="nav-link" href="{% url "dashboard" %}">Dashboard</a>
                   </li>
+                  {% endif %}
                 </ul>
 
                 <form class="d-flex" method="get" action="{% url 'foodSearch' %}">
